add an other button to display 87characters, linked main.css for display 87 characters download layzr.js librairie

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,14 @@
 h2{
 	color: #fff;
 }
+
+.btn-modal{
+	display: block;
+	width: 100%;
+	background-color:transparent; 
+}
+
+.btn-modal:hover{
+	background-color: #bdc3c7;
+	cursor: pointer;
+}
